Added location updates and ability to find closest station

--- a/PebbleBart/PebbleBart/PebbleBart-Info.plist
+++ b/PebbleBart/PebbleBart/PebbleBart-Info.plist
@@ -47,8 +47,17 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+	<key>NSLocationUsageDescription</key>
+	<string>Would like your current location to get nearest BART stations</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+		<string>location</string>
+		<string>external-accessory</string>
+		<string>bluetooth-central</string>
+		<string>bluetooth-peripheral</string>
+		<string>fetch</string>
 	</array>
 </dict>
 </plist>
